<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackgroundColor"
    tools:context=".MainActivity"
    app:barrierAllowsGoneWidgets="false"
    >


    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/homeTitle"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/primaryLightColor"/>

    <Button
        android:id="@+id/goToWarmUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/primaryLightColor"
        android:text="@string/goToWarmUp"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/goToExercises"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTitle" />

    <Button
        android:id="@+id/goToExercises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/primaryLightColor"
        android:text="@string/goToExercises"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/goToTimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToWarmUp" />


    <Button
        android:id="@+id/goToTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/primaryLightColor"
        android:text="@string/countdown"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToExercises"
         />


</androidx.constraintlayout.widget.ConstraintLayout>